@@ -338,8 +338,6 @@ test_Struct4(void)
 void
 test_Struct5(void)
 {
-/* ASSERT(a2 == 2) currently fails in this test (2012-02-29) */
-#if 0
   packet_t  *pp1;
   packet_t  *pp2;
   unsigned char lx;
@@ -367,14 +365,11 @@ test_Struct5(void)
   ASSERT(a1 == 1);
   ASSERT(a2 == 2);
   ASSERT(a3 == 3);
-#endif
 }
 
 void
 test_Global1(void)
 {
-/* ASSERT(a2 == 2) currently fails in this test (2012-02-29) */
-#if 0
   unsigned char lx;
   unsigned char *px;
 
@@ -392,7 +387,6 @@ test_Global1(void)
   
   ASSERT(a1 == 0);
   ASSERT(a2 == 2);
-#endif
 }
 
 /* Hide taking the address of gx by defining this function last */
